package lab12.Ex1_Strategy;

import java.util.ArrayList;

public interface OrderStrategy {
    public void order(ArrayList<PhoneInfo> infos);
}
